@@ -1,3 +1,9 @@
+2006-05-22  Nick Clifton  <nickc@redhat.com>
+
+	* gas/mips/mips32-dsp.l: Fix expected unsigned decoding of -1 in
+	warning messages.
+	* gas/mips/mips32-mt.l: Likewise.
+
 2006-05-19  Thiemo Seufer  <ths@mips.com>
 
 	* gas/mips/vxworks1-el.d, gas/mips/vxworks1-xgot-el.d: Add little
